--- a/YWWACP/YWWACP/Resources/layout/Profile.axml
+++ b/YWWACP/YWWACP/Resources/layout/Profile.axml
@@ -21,14 +21,13 @@
         android:id="@+id/textViewName"
         local:MvxBind="Text Name"
         android:paddingLeft="15dp" />
-
-  <TextView
-    android:text="Height"
-    android:textAppearance="?android:attr/textAppearanceMedium"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/textViewHeightLabel"
-    android:padding="5dp" />
+    <TextView
+        android:text="Height"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewHeightLabel"
+        android:padding="5dp" />
     <TextView
         android:text="HeightPlaceHolder"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -38,14 +37,13 @@
         android:paddingLeft="15dp"
         android:id="@+id/textViewHeight"
         local:MvxBind="Text Height" />
-
-  <TextView
-    android:text="Weight"
-    android:textAppearance="?android:attr/textAppearanceMedium"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/textViewWeightLabel"
-    android:padding="5dp" />
+    <TextView
+        android:text="Weight"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewWeightLabel"
+        android:padding="5dp" />
     <TextView
         android:text="WeightPlaceHolder"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -55,14 +53,13 @@
         android:id="@+id/textViewWeight"
         android:paddingLeft="15dp"
         local:MvxBind="Text Weight" />
-
-  <TextView
-    android:text="Age"
-    android:textAppearance="?android:attr/textAppearanceMedium"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/textViewAgeLabel"
-    android:padding="5dp" />
+    <TextView
+        android:text="Age"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewAgeLabel"
+        android:padding="5dp" />
     <TextView
         android:text="AgePlaceHolder"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -77,5 +74,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="20"
-        android:id="@+id/buttonEditProfileInformation" />
+        android:id="@+id/buttonEditProfileInformation" 
+        local:MvxBind="Click EditProfileCommand"/>
 </LinearLayout>
