--- a/YWWACP/YWWACP/Resources/layout/Main.axml
+++ b/YWWACP/YWWACP/Resources/layout/Main.axml
@@ -1,40 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+<!-- content must go before menu because of z-order -->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
-    <android.support.v4.widget.DrawerLayout
-        android:id="@+id/drawer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <!-- The Main Content View -->
-        <RelativeLayout
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <include
+            layout="@layout/toolbar" />
+        <FrameLayout
+            android:id="@+id/frameLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="YOLO"
-                android:layout_centerInParent="true" />
-        </RelativeLayout>
-    <!-- The Left Navigation Drawer -->
-        <ListView
-            android:id="@+id/left_drawer"
-            android:layout_width="240dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:choiceMode="singleChoice"
-            android:divider="#818181"
-            android:dividerHeight="1dp"
-            android:background="#E32FD2" />
-    </android.support.v4.widget.DrawerLayout>
-</LinearLayout>
+            android:layout_height="match_parent" />
+    </LinearLayout>
+<!-- menu -->
+    <ListView
+        android:id="@+id/drawerListView"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:background="?android:attr/windowBackground" />
+</android.support.v4.widget.DrawerLayout>
