--- a/YWWACP/YWWACP/Resources/layout/Toolbar.axml
+++ b/YWWACP/YWWACP/Resources/layout/Toolbar.axml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    android:background="?attr/colorPrimary"
+    android:layout_height="@dimen/abc_action_bar_default_height_material"
+    android:background="@color/myColor"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
