--- a/YWWACP/YWWACP/Resources/layout/ExerciseListViewRow.axml
+++ b/YWWACP/YWWACP/Resources/layout/ExerciseListViewRow.axml
@@ -22,14 +22,14 @@
             android:id="@+id/txtRecipeViewContent"
             android:paddingTop="10dp"
             android:paddingLeft="15dp"
-            local:MvxBind="Text MealTitle " />
+            local:MvxBind="Text ExerciseTitle " />
         <ImageView
             android:gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_weight="1"
             android:id="@+id/demoImageView"
-            android:src="@drawable/recipe"
+            android:src="@drawable/barbell"
             android:layout_marginLeft="0.0dp" />
     </LinearLayout>
     <TextView
@@ -42,5 +42,5 @@
         android:id="@+id/txtRecipeViewContent"
         android:paddingTop="10dp"
         android:paddingLeft="15dp"
-        local:MvxBind="Text MealSummary " />
+        local:MvxBind="Text ExerciseSummary " />
 </LinearLayout>
