--- a/YWWACP/YWWACP/Resources/layout/FirstView.axml
+++ b/YWWACP/YWWACP/Resources/layout/FirstView.axml
@@ -35,8 +35,8 @@
         android:id="@+id/btnRecipes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/Recipes" 
-        local:MvxBind="Click OpenRecipeCommand"/>
+        android:text="@string/Recipes"
+        local:MvxBind="Click OpenRecipeCommand" />
     <Button
         android:id="@+id/btnCommunity"
         android:layout_width="match_parent"
@@ -47,19 +47,19 @@
         android:id="@+id/btnExercise"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/Exercises" />
+        android:text="@string/Exercises"
+        local:MvxBind="Click OpenExerciseCommand"/>
     <Button
         android:id="@+id/btnGraph"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Graph" />
-      <Button
+    <Button
         android:id="@+id/btnDelete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="DELETE ENTIRE DATABASE" 
+        android:text="DELETE ENTIRE DATABASE"
         local:MvxBind="Click DeleteEverythingCommand" />
-  
 <!--oxyplot start-->
     <LinearLayout
         android:orientation="vertical"
