--- a/YWWACP/YWWACP/Resources/layout/SingleExercise.axml
+++ b/YWWACP/YWWACP/Resources/layout/SingleExercise.axml
@@ -21,15 +21,15 @@
             android:textSize="25dip"
             android:paddingLeft="5dp"
             android:paddingTop="2dp"
-            local:MvxBind="Text MealTitle" />
+            local:MvxBind="Text ExerciseTitle" />
     </LinearLayout>
     <Mvx.MvxListView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="500"
-        android:id="@+id/listViewRecipes"
-        local:MvxItemTemplate="@layout/singlerecipelistviewrow"
-        local:MvxBind="ItemsSource Meals" />
+        android:id="@+id/listViewExercises"
+        local:MvxItemTemplate="@layout/singleexerciselistviewrow"
+        local:MvxBind="ItemsSource Exercises" />
 <!-- <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
