--- a/YWWACP/YWWACP/Resources/layout/SingleExerciseListViewRow.axml
+++ b/YWWACP/YWWACP/Resources/layout/SingleExerciseListViewRow.axml
@@ -14,33 +14,28 @@
         android:layout_height="fill_parent"
         android:layout_weight="1">
         <TextView
-            style="@+style/bigTextViewTheme"
+            style="@+style/smallTextViewTheme"
             android:text="Content"
             android:gravity="center_horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
+            android:layout_height="200dp"
+            android:layout_weight="1"
             android:id="@+id/txtRecipeViewContent"
             android:paddingTop="10dp"
             android:paddingLeft="15dp"
-            local:MvxBind="Text MealTitle " />
+            local:MvxBind="Text ExerciseSummary " />
         <ImageView
             android:gravity="center_horizontal"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="150dp"
             android:layout_weight="1"
             android:id="@+id/demoImageView"
-            android:src="@drawable/recipe"
+            android:src="@drawable/barbell"
             android:layout_marginLeft="0.0dp" />
     </LinearLayout>
-    <TextView
-        style="@+style/textViewTheme"
-        android:text="Content"
-        android:gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_weight="1"
-        android:id="@+id/txtRecipeViewContent"
-        android:paddingTop="10dp"
-        android:paddingLeft="15dp"
-        local:MvxBind="Text MealSummary " />
+    <Button
+        android:id="@+id/btnDiary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add" />
 </LinearLayout>
