--- a/YWWACP/YWWACP/Resources/layout/Diary.axml
+++ b/YWWACP/YWWACP/Resources/layout/Diary.axml
@@ -1,39 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:local="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:minWidth="25px"
-    android:minHeight="25px">
-    <ActionMenuView
-        android:minWidth="25px"
-        android:minHeight="40px"
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/dayPicker"
-        android:background="@android:color/holo_blue_light">
-        <MvvmCross.Binding.Droid.Views.MvxDatePicker
+        android:layout_height="match_parent">
+        
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+            <MvvmCross.Binding.Droid.Views.MvxDatePicker
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/datePicker1"
+                android:layout_centerHorizontal="true"
+                local:MvxBind="Value Date"
+                android:layout_marginLeft="100px"
+                android:layout_marginTop="20px" />
+          <Mvx.MvxListView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/mvxDatePicker1" />
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnYesterday"
-            android:drawableStart="@drawable/arrow_left" />
-        <Button
-            android:text="@string/Today"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnToday" />
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnTomorrow"
-            android:drawableStart="@drawable/arrow_right" />
-        <DatePicker
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/datePicker1" />
-    </ActionMenuView>
+            android:layout_height="fill_parent"
+            local:MvxItemTemplate="@layout/diaryentryrow"
+            local:MvxBind="ItemsSource Entries;" />
+        </RelativeLayout>
+      
+    </LinearLayout>
 </LinearLayout>
