--- a/YWWACP/YWWACP/Resources/layout/Exercise.axml
+++ b/YWWACP/YWWACP/Resources/layout/Exercise.axml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="100">
-<!--<LinearLayout
+  <LinearLayout
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="0dp"
@@ -13,20 +13,19 @@
       android:id="@+id/linearLayoutWrapTopButtons"
       android:weightSum="100">
     <Button
-        android:text="@string/New_Thread"
+        android:text="Exercises"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="50"
-        android:id="@+id/btnNewThread"
-        local:MvxBind="Click AddNewThreadCommand" />
+        android:id="@+id/btnNewThread" />
     <Button
-        android:text="@string/My_Threads"
+        android:text="Recipes"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="50"
         android:id="@+id/btnMyThreads"
-        local:MvxBind="Click MyThreadsCommand" /> 
-  </LinearLayout> -->
+        local:MvxBind="Click RecipesViewCommand" /> 
+  </LinearLayout>
     <Mvx.MvxListView
         android:layout_width="match_parent"
         android:layout_height="0dp"
