navigation bar working. IMPLEMENT IT BITCHES!

--- a/YWWACP/YWWACP/Resources/layout/Community.axml
+++ b/YWWACP/YWWACP/Resources/layout/Community.axml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="100">
+    android:layout_height="match_parent">
+    <include
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        layout="@layout/navbar" />
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="10"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:id="@+id/linearLayoutWrapTopButtons"
         android:weightSum="100">
         <Button
@@ -32,6 +36,8 @@
         android:layout_height="0dp"
         android:layout_weight="90"
         android:id="@+id/listViewCommunity"
+        android:layout_above="@id/navigation"
+        android:layout_below="@id/linearLayoutWrapTopButtons"
         local:MvxItemTemplate="@layout/communitylistviewrow"
         local:MvxBind="ItemsSource NewThreads; ItemClick SelectThreadCommand" />
-</LinearLayout>
+</RelativeLayout>
